--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,21 @@
 /* classes attached to <body> */
+@keyframes count-up {
+    from {
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 
+  .counter {
+    font-size: 36px;
+    font-weight: bold;
+    animation: count-up 1s ease-out;
+  }
+  
 .fc-not-allowed,
 .fc-not-allowed .fc-event {
     /* override events' custom cursors */
